fix footer size on mobile checkout

--- a/wp-content/themes/known_starter/src/style.css
+++ b/wp-content/themes/known_starter/src/style.css
@@ -3363,11 +3363,11 @@ section.up-sells h2 {
   background: #6d5e67;
   color: #fff;
   padding: 2rem 0;
-  text-align: center;
-  margin: 0 -3rem; }
+  text-align: center; }
   @media (min-width: 768px) {
     #cart-footer {
-      text-align: left; } }
+      text-align: left;
+      margin: 0 -3rem; } }
   #cart-footer .inner {
     padding: 0 3rem; }
     @media (min-width: 768px) {
